--- a/healthcare/src/components/LogoSection.module.css
+++ b/healthcare/src/components/LogoSection.module.css
@@ -1,4 +1,12 @@
-.logoSection {
+/* src/components/LogoSection.module.css */
+
+.logoSectionWrapper {
+    width : 1440px ; 
+    height: 832px; 
+    background: linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%);;
+  }
+  
+  .logoSection {
     width: 100%;
     max-width: 1440px;
     height: 96px;
@@ -7,7 +15,7 @@
     justify-content: space-between;
     padding: 0 20px;
     box-sizing: border-box;
-    background: linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%); 
+    background: linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%);
     position: relative;
   }
   
