--- a/healthcare/src/components/CardContainer.module.css
+++ b/healthcare/src/components/CardContainer.module.css
@@ -1,7 +1,9 @@
 .container {
-    position: relative;
+    /* position: relative; */
+    position: absolute;
     width: 1440px; 
     height: 300px; 
+    top: 1035px;
   }
   
   .card {
