--- a/healthcare/src/components/SpecialisationSection.module.css
+++ b/healthcare/src/components/SpecialisationSection.module.css
@@ -2,7 +2,8 @@
         width: 1440px;
         height: 729px; 
         background: linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%);
-        position: relative;
+        /* position: relative; */
+        position: absolute;
         top: 1327px;
   }
   
