--- a/healthcare/src/components/HealthMobileapp.module.css
+++ b/healthcare/src/components/HealthMobileapp.module.css
@@ -10,17 +10,14 @@
     background: linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%);   
 } ;
 
-.MobileContent {
+
+.mobile {
+   
     width: 1162px;
     height: 566px;
-    /* top: 5714px; */
+    top: 41px;
     left: 81px;
-    
-    
-
-} ;
+    /* margin-bottom: 20px; */
 
 
-/* .mobile {
-
-} */
+}
